--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject.csproj
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject.csproj
@@ -474,13 +474,13 @@
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Product\AddOn\CategoryHeaderView\Index.cshtml" />
-    <Content Include="Views\CategoryItem\Index.cshtml" />
     <Content Include="Views\Shared\_WebShopLayout.cshtml" />
     <Content Include="Views\Body\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\Repositories\Product\AddOn\" />
+    <Folder Include="Views\CategoryItem\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
