--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject.Tests/DeveloperDOtnetStoreProject.Tests.csproj
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject.Tests/DeveloperDOtnetStoreProject.Tests.csproj
@@ -108,6 +108,8 @@
     </Reference>
     <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
